# table_control_app

./: CMakeLists.txt  Main.qml  README.md  apptable_control_qml_module_dir_map.qrc  main.cpp  qmldir
assets/: foot.gltf
src/: tube.cpp  tube.glb  tube.h
